# redicpp

./: .gitignore  Client.cpp  Client.h  Dependencies.h  Makefile  README.md  Server.cpp  Server.h  build.sh  main_client.cpp  main_server.cpp  rclient.cpp  rserver.cpp  runTests.sh
.github/workflows/: cmake-single-platform.yml
building/: Client.cpp  Client.h  Dependencies.h  Makefile  Server.cpp  Server.h  mainClient.cpp
main_v2/: CMakeLists.txt  Makefile
